small changes to fix projects page spacing

--- a/src/app/projects/_projects-page.scss
+++ b/src/app/projects/_projects-page.scss
@@ -41,8 +41,8 @@
 .projectTile {
     border: 1px solid var(--UI-ui-03, #E0E0E0);
     background: #FFF;
-    width: 350px;
-    height: 350px;
+    width: 325px;
+    height: 325px;
   }
 
 .projectTile__title {
@@ -109,14 +109,9 @@
 }
 
 .search-row {
-    padding-left: 1em;
     display: flex;
 }
 
-.filter-row {
-    width: 100%;
-    padding-left: 1em;
-}
 .filter-search {
     width: 100%;
 }
@@ -128,6 +123,7 @@
 
 .search_projects__col {
     display: inline-block;
+    margin-right: 0;
 }
 
 .projectTile__techs {
@@ -136,4 +132,8 @@
 
 .projectTile__industry {
     margin-left: 0;
+}
+
+.searchbar__col {
+    margin-right: 0;
 }
